--- a/settings.yaml
+++ b/settings.yaml
@@ -125,9 +125,9 @@ spec:
           name: category_number
           label: 分类页文章列表每列显示数量
           value: 1
-          validation: "min:1|max:4"
+          validation: "min:1|max:50"
           min: 1
-          max: 4
+          max: 50
     - group: nav
       label: 导航
       formSchema:
@@ -256,6 +256,13 @@ spec:
           label: 最新评论
           value: 5
           help: 最新评论数量, 小于 0 则展示5条评论
+        - $formkit: number
+          name: tagQuantity
+          label: 分类显示数量
+          value: 10
+          validation: "min:1|max:4"
+          min: 1
+          max: 50
     - group: link
       label: 友链
       formSchema:
