--- a/settings.yaml
+++ b/settings.yaml
@@ -257,7 +257,7 @@ spec:
           value: 5
           help: 最新评论数量, 小于 0 则展示5条评论
         - $formkit: number
-          name: tagQuantity
+          name: categoryQuantity
           label: 分类显示数量
           value: 10
           validation: "min:1|max:50"
